# MLops-taller2

./: .dockerignore  README.md  docker-compose.yml
Docker/: fastapi.Dockerfile  jupyterlab.Dockerfile
Setup/: pyproject.toml
Setup/API/: main.py
Setup/Model/: prueba.ipynb  train.py
