[project]
name = "penguins-project"
version = "0.1.0"
description = "Dependencias compartidas para entrenamiento y API."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "joblib>=1.4.0",
    "scikit-learn>=1.5.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
]
